prevent default dark mode

--- a/src/scss/mixins/_dark-mode.scss
+++ b/src/scss/mixins/_dark-mode.scss
@@ -5,15 +5,15 @@
  * properties in a way that supports the theme toggle web component
  */
 @mixin dark-mode() {
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --color-mode: 'dark';
-    }
-
-    :root:not([data-user-color-scheme]) {
-      @content;
-    }
-  }
+  //@media (prefers-color-scheme: dark) {
+  //  :root {
+  //    --color-mode: 'dark';
+  //  }
+  //
+  //  :root:not([data-user-color-scheme]) {
+  //    @content;
+  //  }
+  //}
 
   [data-user-color-scheme='dark'] {
     @content;
